--- a/example.bib
+++ b/example.bib
@@ -45,7 +45,7 @@
 
 @MISC{CM1,
     author = {George H. Bryan},
-    title = {The governing equations for CM1},
+    title = {The governing equations for {CM1}},
     year = {2013}
 }
 
@@ -298,6 +298,18 @@ lastaccessed = "December 1, 2018",
   url = {https://arm-hpc.gitlab.io/presentations/SC17-Arm-Ecosystem.pdf}
 }
 
+@techreport{2017:synpop,
+  author = {Swarup, Samarth and Marathe, Madhav V.},
+  title = {Generating Synthetic Populations for Social Modeling},
+  institution = {{AAMAS}'17},
+  year = {2017},
+  type = {Tutorial},
+  number = {},
+  month = {},
+  doi = {},
+  url = {http://people.virginia.edu/~ss7rs/synthetic_population_tutorial_2/slides.php}
+}
+
 @techreport{2019:hi1616,
   author = {Guo, Xu and Morales, Cristian and Saastad, Ole Widar and Shamakina, Anastasia and Rijks, Wim and Weinberg, Volker},
   title = {Best Practice Guide -- {ARM64}},
@@ -311,6 +323,18 @@ lastaccessed = "December 1, 2018",
   url = {}
 }
 
+@techreport{2017:gg_pilot,
+  author = {Wolf, Sarah and F{{\"u}}rst, Steffen and Geiges, Andreas and Steudle, Gesine A. and von Postel, Jette and Jaeger, Carlo C.},
+  title = {Electric Mobility in view of Green Growth},
+  institution = {{GCF}},
+  year = {2017},
+  type = {Tech.report.},
+  number = {3},
+  pages= {14},
+  month = {},
+  doi = {},
+  url = {https://globalclimateforum.org/wp-content/uploads/2018/12/GCFWorkingPaper3-2017.pdf}
+}
 @misc{now:epyc,
   author = {wikichip},
   title = {Hi1616 - HiSilicon},
@@ -320,7 +344,19 @@ lastaccessed = "December 1, 2018",
   url = {https://en.wikichip.org/wiki/hisilicon/hi16xx/hi1616}
 }
 
-@techreport{2018:gg_pilot,
+@techreport{2017:graph_abms,
+  author = {Gogolenko, Sergiy},
+  title = {Software for agent based social simulation with raster inputs in distributed {HPC} environments},
+  institution = {WSSP'17},
+  year = {2017},
+  type = {Presentation},
+  number = {},
+  month = {October},
+  doi = {},
+  url = {https://fs.hlrs.de/projects/teraflop/26thWorkshop_talks/WSSP26-24_Gogolenko.pdf}
+}
+
+@techreport{2018:abm4py,
   author = {Geiges, Andreas and Wolf, Sarah and Steudle, Gesine and Fuerst, Steffen},
   title = {Report of framework for prototyping of parallel Agent Based Modelling Systems},
   institution = {{CoeGSS} - Centre of Excellence for Global Systems Science},
@@ -331,6 +367,33 @@ lastaccessed = "December 1, 2018",
   month = {},
   doi = {},
   url = {http://coegss.eu/wp-content/uploads/2018/11/D3.8.pdf}
+}
+
+
+@techreport{2017:coegss_benchmark1,
+  author = {Gienger, Michael and Petruczynik, Sebastian and Januszewski, Radoslaw and Kaliszan, Damian and Gogolenko, Sergiy and Fuerst, Steffen and Palka, Michal and Ubaldi, Enrico},
+  title = {First Report on provided testbed components for running services and pilots},
+  institution = {{CoeGSS} - Centre of Excellence for Global Systems Science},
+  year = {2017},
+  type = {Deliverable},
+  number = {5.7},
+  pages= {76},
+  month = {},
+  doi = {},
+  url = {http://coegss.eu/wp-content/uploads/2018/02/D5.7.pdf}
+}
+
+@techreport{2018:coegss_benchmark2,
+  author = {Gienger, Michael and Gogolenko, Sergiy and Geiges, Andreas and Kaliszan, Damian and Petruczynik, Sebastian and Januszewski, Radoslaw and Wolniewicz, Pawel},
+  title = {Second report on provided testbed components for running services and pilots},
+  institution = {{CoeGSS} - Centre of Excellence for Global Systems Science},
+  year = {2018},
+  type = {Deliverable},
+  number = {5.8},
+  pages= {60},
+  month = {},
+  doi = {},
+  url = {http://coegss.eu/wp-content/uploads/2018/11/D5.8.pdf}
 }
 
 @inproceedings{2014:pandora,
@@ -365,4 +428,16 @@ lastaccessed = "December 1, 2018",
   url = {https://media.readthedocs.org/pdf/flamegpu/latest/flamegpu.pdf}
 }
 
-
+@article{CHEMEL2014410,
+title = "Application of chemical transport model CMAQ to policy decisions regarding PM2.5 in the UK",
+journal = "Atmospheric Environment",
+volume = "82",
+pages = "410 - 417",
+year = "2014",
+issn = "1352-2310",
+doi = "https://doi.org/10.1016/j.atmosenv.2013.10.001",
+url = "http://www.sciencedirect.com/science/article/pii/S1352231013007541",
+author = "C. Chemel and B.E.A. Fisher and X. Kong and X.V. Francis and R.S. Sokhi and N. Good and W.J. Collins and G.A. Folberth",
+keywords = "Regional air quality, CMAQ, Limit values, Emissions inventory, Industrial footprint, Local traffic pollution",
+abstract = "This paper shows how the advanced chemical transport model CMAQ can be used to estimate future levels of PM2.5 in the UK, the key air pollutant in terms of human health effects, but one which is largely made up from the formation of secondary particulate in the atmosphere. By adding the primary particulate contribution from typical urban roads and including a margin for error, it is concluded that the current indicative limit value for PM2.5 will largely be met in 2020 assuming 2006 meteorological conditions. Contributions to annual average regional PM2.5 concentration from wild fires in Europe in 2006 and from possible climate change between 2006 and 2020 are shown to be small compared with the change in PM2.5 concentration arising from changes in emissions between 2006 and 2020. The contribution from emissions from major industrial sources regulated in the UK is estimated from additional CMAQ calculations. The potential source strength of these emissions is a useful indicator of the linearity of the response of the atmosphere to changes in emissions. Uncertainties in the modelling of regional and local sources are taken into account based on previous evaluations of the models. Future actual trends in emissions mean that exceedences of limit values may arise, and these and further research into PM2.5 health effects will need to be part of the future strategy to manage PM2.5 concentrations."
+}
