--- a/paper.tex
+++ b/paper.tex
@@ -48,6 +48,7 @@
 % -----------------------------------------------------------------------
 
 \input{introduction}
+\section{Benchmark and experimental setup}
 \input{applications}
 %%\input{description_tests}
 \input{architectures}
