--- a/paper.tex
+++ b/paper.tex
@@ -47,13 +47,26 @@
 
 % -----------------------------------------------------------------------
 
+\section*{Introduction}
+\label{sec:intro}
 \input{introduction}
+
 \section{Benchmark and experimental setup}
+\label{sec:benchmark}
 \input{applications}
 %%\input{description_tests}
 \input{architectures}
+\input{measuring}
+
+\section{Analysis of results}
+\label{sec:analysis}
 \input{analysis}
+
+\section{Conslusions}
+\label{sec:summary}
 \input{summary}
+
+\section{Future work}
 \input{future_work}
 
 \section*{Acknowledgements}
