--- a/introduction.tex
+++ b/introduction.tex
@@ -1,6 +1,14 @@
-\section*{Introduction}
-\label{sec:intro}
 Global Systems Science (GSS) is a branch of science using specific knowledge and techniques to evaluate the impact of policies and people's relation on various global phenomena such as climate change, financial crises, pandemic spread, growth of the cities, human migration, etc. This document addresses the question ``which HPC architectures among the recently introduced are best to run GSS applications most effectively?''. Such aliases as ``the best'' or ``most effectively'' may obviously have different meanings for different people. While for some it may be the fastest execution time, others may be interested in the price-performance ratio calculated as the price of a processor multiplied by total execution time (for given architecture) or the least carbon footprint left, calculated as a product of TDP and total execution time.
-For the purpose of this study, the authors acquired cutting-edge processors from four major vendors -- Intel, AMD, ARM, and IBM. In particular, we benchmerked GSS applications on Intel\textregistered Xeon\textregistered Gold 6140 \cite{INTELXEONGOLD6140} 2-node cluster, AMD Epyc\textsuperscript{TM} 7551 single node, ARM Hi1616 2-node cluster, IBM Power8+ \cite{IBMPOWER8} single node, and -- as a reference testbed -- Eagle cluster located at Poznan Supercomputing and Networking Center (Poland) equipped with Intel\textregistered  Xeon\textregistered Haswell E5-2697 v3 processors.
+For the purpose of this study, the authors acquired cutting-edge processors from four major vendors -- Intel, AMD, HiSilicon, and IBM. In particular, we benchmerked GSS applications on Intel\textregistered Xeon\textregistered Gold 6140 \cite{INTELXEONGOLD6140} 2-node cluster, AMD Epyc\textsuperscript{TM} 7551 single node, ARM Hi1616 2-node cluster, IBM Power8+ \cite{IBMPOWER8} single node, and -- as a reference testbed -- Eagle cluster located at Poznan Supercomputing and Networking Center (Poland) equipped with Intel\textregistered  Xeon\textregistered Haswell E5-2697 v3 processors.
 The set of tested applications (called a \textit{GSS benchmark} here) covers many research areas from the entire GSS field.
 The metrics of interest were measured by means of \texttt{/usr/bin/time} Linux utility.
+
+The rest of the paper is organized as follows.
+Section\,\ref{sec:benchmark} describes benchmark and the experimental setup.
+More specifically, we introduce applications chosen for the benchmarked and motivate this choice,
+present technical overview of the testbeds where the tests were launched,
+and discuss approach selected for measuring performance metrics.
+In Section\,\ref{sec:analysis}, we overview main benchmarking results.
+In particular, we emphasize on the applicability of those results for the hardware/software co-design.
+Section\,\ref{sec:summary} contains statements for the most relevant conclusions.
+Finally, we end our paper with formulation of the directions for furure research.
